<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.prettygirl.app.components.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dip"
        android:orientation="vertical" >

        <com.prettygirl.app.components.MButton
            android:id="@+id/favorite_button"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginBottom="10dip"
            android:background="@drawable/thumb_up_left_background"
            android:drawableRight="@drawable/e_favorite_checked"
            android:gravity="center"
            android:paddingRight="5dip"
            android:singleLine="true"
            android:layout_marginLeft="5dip"
            android:text="@string/favorite_button_text"
            android:textColor="@color/custom_point_text_color" />

        <com.prettygirl.app.components.MButton
            android:id="@+id/share_button"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/thumb_up_left_background"
            android:drawableRight="@drawable/share_with"
            android:gravity="center"
            android:paddingRight="5dip"
            android:singleLine="true"
            android:layout_marginLeft="5dip"
            android:text="@string/share_title"
            android:textColor="@color/custom_point_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="15dip"
        android:orientation="vertical" >

        <com.prettygirl.app.components.MButton
            android:id="@+id/navigation_rank_center"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginBottom="10dip"
            android:background="@drawable/thumb_up_background"
            android:drawableLeft="@drawable/rank_center"
            android:gravity="center"
            android:paddingLeft="5dip"
            android:singleLine="true"
            android:layout_marginRight="5dip"
            android:text="@string/navigation_rank_center"
            android:textColor="@color/custom_point_text_color" />

        <com.prettygirl.app.components.MButton
            android:id="@+id/more_button"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/thumb_up_background"
            android:drawableLeft="@drawable/ad_icon_girl"
            android:gravity="center"
            android:paddingLeft="5dip"
            android:layout_marginRight="5dip"
            android:singleLine="true"
            android:text="@string/more_button_text"
            android:textColor="@color/custom_point_text_color" />
    </LinearLayout>

</RelativeLayout>