<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="160dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical"
        android:paddingBottom="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/slide_side_view_version_name"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="160dip"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/navigation_rank_center_latest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_top"
            android:clickable="true"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:text="@string/navigation_rank_center_latest"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/left_default" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigation_rank_center_weeky"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_middle"
            android:clickable="true"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:text="@string/navigation_rank_center_weeky"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/left_default" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigation_rank_center_monthy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_bottom"
            android:clickable="true"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:text="@string/navigation_rank_center_monthy"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/left_default" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="160dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dip"
        android:orientation="vertical"
        android:paddingBottom="10dip" >

        <LinearLayout
            android:id="@+id/navigation_rank_center_support"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_top"
            android:clickable="true"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:text="@string/navigation_rank_center_support"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/left_default" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigation_rank_center_contact_us"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_bottom"
            android:clickable="true"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_marginBottom="3dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="2.0"
                android:singleLine="true"
                android:text="@string/navigation_rank_center_contact_us"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/left_default" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/navigation_side_view_close"
        android:layout_width="2dip"
        android:layout_height="fill_parent"
        android:background="@drawable/e_slide_side_splite" />

</RelativeLayout>